tests/NormalTests/paczka1/fuzzy1/33289070.err
Error in line 7: bPUF1hJszo A26Z 161,9
Error in line 10: ZSat5V6k A356 46,4
Error in line 13: ZSat5V6k A265 18,8
Error in line 15: ZSat5V6k S869 12,9
Error in line 1: bPUF1hJszo A265 87,5
Error in line 21: 0URdYo21vbh S512 90,2
Error in line 34: ZSat5V6k A265 -2,9
Error in line 29: ZSat5V6k S869 42,1
